usdrupaldeploy.yml
apiVersion: v1
kind: Service
metadata:
  name: usa-drupal
  labels:
    app: usa-drupal
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: usa-drupal
    tier: frontend
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: usa-drupal
  labels:
    app: usa-drupal
spec:
  selector:
    matchLabels:
      app: usa-drupal
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: usa-drupal
        tier: frontend
    spec:
      containers:
      - image: drupal:8-apache
        name: usa-drupal
        ports:
        - containerPort: 80
          name: usa-drupal
        volumeMounts:
        - name: drupal-persistent-storage
          mountPath: /var/www/html/modules
        - name: drupal-persistent-storage
          mountPath: /var/www/html/profiles  
        - name: drupal-persistent-storage
          mountPath: /var/www/html/sites
        - name: drupal-persistent-storage
          mountPath: /var/www/html/themes         
      volumes:
      - name: drupal-persistent-storage
        persistentVolumeClaim:
          claimName: usa-eks-drupal
